[package]
name = "sdfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
rand = "0.8"
vhdrs = "0.1.1"
windows = "0.61.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"